# SMC

./: .gitignore  readme.md
dest/cg/: constantExpr.json  mcsema1.json  mcsema2.json  mcsema3.json  mcsema4.json  mcsema5.json  mcsema6.json  mcsema7.json  mcsema8.json  mcsema9.json  simple.json  simple2.json  smc1.json  smc2.json  smc3.json  smc4.json  smc5.json  smc6.json  smc7.json  smc8.json  smc9.json
dest/cs/: constantExpr.cs.json  mcsema1.cs.json  mcsema2.cs.json  mcsema3.cs.json  mcsema4.cs.json  mcsema5.cs.json  mcsema6.cs.json  mcsema7.cs.json  mcsema8.cs.json  mcsema9.cs.json  simple.cs.json  simple2.cs.json  smc1.cs.json  smc2.cs.json  smc3.cs.json  smc4.cs.json  smc5.cs.json  smc6.cs.json  smc7.cs.json  smc8.cs.json  smc9.cs.json
dest/de/: constantExpr.de.json  gcc_m32_NO_PIE_smc12.de.json  gcc_m64_NO_PIE_smc1.de.json  gcc_m64_NO_PIE_smc10.de.json  gcc_m64_NO_PIE_smc11.de.json  gcc_m64_NO_PIE_smc14.de.json  gcc_m64_NO_PIE_smc15.de.json  gcc_m64_NO_PIE_smc2.de.json  gcc_m64_NO_PIE_smc3.de.json  gcc_m64_NO_PIE_smc4.de.json  gcc_m64_NO_PIE_smc5.de.json  gcc_m64_NO_PIE_smc6.de.json  gcc_m64_NO_PIE_smc7.de.json  gcc_m64_NO_PIE_smc8.de.json  gcc_m64_NO_PIE_smc9.de.json  gcc_m64_PIE_smc1.de.json  gcc_m64_PIE_smc10.de.json  gcc_m64_PIE_smc11.de.json  gcc_m64_PIE_smc12.de.json  gcc_m64_PIE_smc13.de.json  gcc_m64_PIE_smc15.de.json  (+37 more)
docs/: ConstraintFormat.md  scripts.md  useanvil.md
scripts/: mcsema-script.py
src/: cubic.py  detector.py  setup.py  test.py
src/llvmsmc/ffi/: CMakeLists.txt  StackAnalysis.cpp  constraint.cpp  detector.cpp  test.cpp  util.cpp
(+315 files in other folders)
